--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
     transition: all 0.5s ease;
 
 }
-bottom{
+button{
     padding: 10px 20px;
     font-size: 16px ;
     background-color:#28a745 ;
@@ -25,6 +25,6 @@ bottom{
     border:none;
     cursor: pointer;
 }
-botton:hover{
+button:hover{
     background-color: #218838;
 }
