--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
     transition: all 0.5s ease;
 
 }
-button{
+botton{
     padding: 10px 20px;
     font-size: 16px ;
     background-color:#28a745 ;
